# breakout

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  devenv.nix  mingw-toolchain.cmake
include/game/: BreakoutGame.h
resources/shaders/: default.frag  default.vert  particle.frag  particle.vert
src/: main.cpp
src/game/: BallClass.cpp  BallClass.h  BreakoutGame.cpp  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.h
src/gfx/: ParticleGenerator.cpp  ParticleGenerator.h  ResourceManager.cpp  ResourceManager.h  Shader.h  SpriteRenderer.cpp
src/shaders/: default.vert  particle.frag  particle.vert
